# demo-edit-log

./: .flake8  INSTALLATION.md  Pipfile  README.md  main.py  pyproject.toml
algos/: algos.py
config/: config.py
src/: algorithms.py  config.py  main.css  main.py
